--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Contact Example</title>
 
     <script type="text/javascript" charset="utf-8" src="phonegap-1.2.0.js"></script>
+    <script src="http://jsconsole.com/remote.js?FAE031CD-74A0-46D3-AE36-757BAB262BEA"></script>
     <script type="text/javascript" charset="utf-8">
 
     // Wait for PhoneGap to load
