--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     // Transaction error callback
     //
     function errorCB(err) {
-        console.log("Error processing SQL: "+err.code+" nome:" + err.);
+        console.log("Error processing SQL: "+err.code);
     }
 
     // Transaction success callback
